fix layout on tablet

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -79,6 +79,7 @@ html, body {
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
   #jun-kath {
+    margin-left: -230px;
     width: 512px;
   }
 }
